# libbmp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci-build.yml
cmake/: compiler_flags.cmake  googletest.cmake
libbmp/: CMakeLists.txt  foo.cpp  foo.hpp
libbmp/include/: bmp_decoder.hpp  bmp_structures.hpp  common.hpp  unused.hpp
libbmp/src/: bmp_decoder.cpp  foo.cpp
libbmp/tests/: CMakeLists.txt
libbmp/tests/module_tests/: CMakeLists.txt  mt_simple_2x2_24bit_bmp.cpp
libbmp/tests/unit_tests/: CMakeLists.txt  ut_common_tests.cpp  ut_foo_tests.cpp
sample/: CMakeLists.txt  main.cpp
